src/parser/snapshots/texlab__parser__build_log__tests__parse@007.txt.snap
---
source: src/parser/build_log.rs
expression: parse_build_log(&text)
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "/some/folder/a.tex",
            level: Error,
            message: "Undefined control sequence.",
            hint: Some(
                "\\lsdkfjlskdfj",
            ),
            line: Some(
                3,
            ),
        },
    ],
}
